# glitchgo

./: .gitignore  .vercelignore  api_keys_migration.sql  build_error.txt  eslint.config.js  index.html  inspect_error_logs.cjs  inspect_workspaces.cjs  lint_results.txt  next.config.mjs  package-lock.json  package.json  setup_workspace_token.cjs  task.md  test_logic.mjs  test_supabase_count.ts  tsconfig.json  vercel.json
.github/workflows/: supabase-keep-alive.yml
desktop/: main.js  package-lock.json  package.json  preload.js
desktop-app/: package.json
desktop-app/src/: app.js  index.html  style.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: installer.cs  main.rs
desktop/src/: app.js  index.css  index.html
public/downloads/: AdminZero-Linux.AppImage  AdminZero-Mac.dmg
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/lib/: aes.ts  ai-pipeline.ts  ast-firewall.ts  crypto.ts  db.ts  pii-scrubber.ts  prompt-firewall.ts  semantic-profiler.ts  supabase.ts  text-to-sql.ts
server/src/routes/: adminzero.ts  api.ts  slack.ts
src/: App.jsx  index.css  proxy.js
src/__tests__/: adminzero-pipeline.test.ts  ast-firewall.test.ts  error-logger.test.ts
src/app/: globals.css  layout.jsx  page.jsx  page.tsx
src/app/guide/: page.jsx
src/components/: DashboardRenderer.tsx
src/context/: ThemeContext.jsx
src/lib/: ast-firewall.js  pii-scrubber.js  prompt-firewall.js  supabase.js
src/pages/: Dashboard.jsx  Landing.jsx  LeaveReview.jsx  Privacy.jsx  Status.jsx  Terms.jsx
(+66 files in other folders)
