[package]
name = "adminzero-desktop"
version = "1.0.0"
description = "Deterministic local AST query firewall gateway for database connections and AI prompt execution security."
authors = ["GlitchGo Developers <issakrajraj@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[features]
# default tauri features
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
